After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 579727 - Fix checks in gfield.c
Fix checks in gfield.c
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
: 587805 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-04-21 15:00 UTC by Owen Taylor
Modified: 2015-02-07 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix checks in gfield.c (1.71 KB, patch)
2009-04-21 15:00 UTC, Owen Taylor
accepted-commit_now Details | Review

Description Owen Taylor 2009-04-21 15:00:18 UTC
When checking if the readable/writable flags are missing for the fields
we are trying to read and write, use (a & flag) == 0, not (!a & flag).
Comment 1 Owen Taylor 2009-04-21 15:00:39 UTC
Created attachment 133043 [details] [review]
Fix checks in gfield.c
Comment 2 Colin Walters 2009-04-21 19:47:54 UTC
Looks good.
Comment 3 Owen Taylor 2009-07-09 10:12:41 UTC
Pushed as 578717e32 (lost track of this one...)
Comment 4 Pascal Terjan 2009-07-14 11:23:58 UTC
*** Bug 587805 has been marked as a duplicate of this bug. ***
Comment 5 Colin Walters 2009-08-24 18:32:21 UTC
Looks like this one should have been closed earlier.
Comment 6 André Klapper 2015-02-07 16:55:46 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]